--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ body
 }
 #textArea
 {
+    display: hidden;
     width: 0px;
     height: 0px;
     z-index: 0;
@@ -60,4 +61,8 @@ button
 }
 button{
     font-size: 1.5em;
+}
+textarea
+{
+    opacity : 0;
 }
